--- a/index.html
+++ b/index.html
@@ -42,18 +42,19 @@
       100% { background-position: center center; }
     }
     .ventana {
-      background-color: #181818;
+      background:
+        linear-gradient(to bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.95));
       border-radius: 30px;
       padding: 40px;
       width: 90%;
       max-width: 700px;
-      box-shadow: 0 10px 40px rgba(0, 0, 0, 0.5);
+      box-shadow: 0 10px 40px rgba(0, 0, 0, 0.6);
       text-align: center;
       position: relative;
       transition: background-color 0.3s;
     }
     body.light-mode .ventana {
-      background-color: rgba(255, 255, 255, 0.95);
+      background: rgba(255, 255, 255, 0.95);
       color: #111;
     }
     h1 {
