--- a/index.html
+++ b/index.html
@@ -57,6 +57,35 @@
       background: rgba(255, 255, 255, 0.95);
       color: #111;
     }
+    .modal {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.7);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+      display: none;
+    }
+    .modal-contenido {
+      background: white;
+      padding: 30px;
+      border-radius: 20px;
+      text-align: center;
+      max-width: 300px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.5);
+    }
+    .modal-contenido p {
+      margin-bottom: 20px;
+    }
+    .modal-contenido button {
+      background-color: #3ae374;
+      color: black;
+      font-weight: bold;
+    }
     h1 {
       font-family: 'MiddleOfApril', cursive;
       font-size: 3.5rem;
