--- a/sugerencias.html
+++ b/sugerencias.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Sugerencias - Diccionario AR</title>
+ <link rel="icon" type="image/png" href="favicon-ar.png">
+<link rel="shortcut icon" href="favicon-ar.ico" type="image/x-icon">
   <style>
     @font-face {
       font-family: 'MiddleOfApril';
