--- a/agregar.html
+++ b/agregar.html
@@ -2,13 +2,17 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Agregar Término - Diccionario AR</title>
- <link rel="icon" type="image/png" href="favicon-ar.png">
-<link rel="shortcut icon" href="favicon-ar.ico" type="image/x-icon">
+  <link rel="icon" type="image/png" href="favicon-ar.png">
+  <link rel="shortcut icon" href="favicon-ar.ico" type="image/x-icon">
   <style>
     @font-face {
       font-family: 'MiddleOfApril';
       src: url('Middle-of-April.ttf') format('truetype');
+    }
+    * {
+      box-sizing: border-box;
     }
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -57,8 +61,24 @@
     button:hover {
       background-color: #005f99;
     }
-      .azul { color: #1877f2; }
+    .azul { color: #1877f2; }
     .rojo { color: #ff5c39; }
+    @media (max-width: 600px) {
+      body {
+        padding: 20px;
+      }
+      .formulario {
+        padding: 20px;
+        border-radius: 15px;
+      }
+      h2 {
+        font-size: 2rem;
+      }
+      select, input, textarea, button {
+        font-size: 14px;
+        padding: 8px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -156,6 +176,6 @@
       }
     }
   </script>
-<div id="popupMsg" style="display:none; position: fixed; top: 20px; left: 50%; transform: translateX(-50%); background-color: #3ae374; color: black; padding: 12px 24px; border-radius: 10px; font-weight: bold; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,0.5);">✅ Término agregado correctamente</div>
+  <div id="popupMsg" style="display:none; position: fixed; top: 20px; left: 50%; transform: translateX(-50%); background-color: #3ae374; color: black; padding: 12px 24px; border-radius: 10px; font-weight: bold; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,0.5);">✅ Término agregado correctamente</div>
 </body>
 </html>
