--- a/index.html
+++ b/index.html
@@ -67,10 +67,12 @@
       font-size: 3.5rem;
       margin: 0 0 40px 0;
       line-height: 1.2;
-      color: #fff;
     }
-    body.light-mode h1 {
-      color: #111;
+    h1 .azul {
+      color: #1877f2;
+    }
+    h1 .rojo {
+      color: #ff5c39;
     }
     input, button {
       width: 100%;
