--- a/index.html
+++ b/index.html
@@ -48,18 +48,18 @@
       100% { background-position: center center; }
     }
     .ventana {
-      background: linear-gradient(to bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.95));
+      background-color: #181818;
       border-radius: 30px;
       padding: 40px;
       width: 90%;
       max-width: 700px;
-      box-shadow: 0 10px 40px rgba(0, 0, 0, 0.6);
+      box-shadow: 0 10px 40px rgba(0, 0, 0, 0.5);
       text-align: center;
       position: relative;
       transition: background-color 0.3s;
     }
     body.light-mode .ventana {
-      background: rgba(255, 255, 255, 0.95);
+      background-color: rgba(255, 255, 255, 0.95);
       color: #111;
     }
     h1 {
@@ -116,19 +116,29 @@
       background-color: #e9e9e9;
       color: #111;
     }
-    .spinner {
-      border: 4px solid #333;
-      border-top: 4px solid #3ae374;
-      border-radius: 50%;
-      width: 30px;
-      height: 30px;
-      animation: spin 1s linear infinite;
-      margin: 10px auto;
-      display: none;
+    .titulo-resultado {
+      font-size: 1.2rem;
+      font-weight: bold;
+      margin-bottom: 8px;
+      color: #3ae374;
     }
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
+    .sinonimos span {
+      background-color: #333;
+      padding: 4px 8px;
+      margin: 2px;
+      border-radius: 6px;
+      display: inline-block;
+      color: white;
+    }
+    body.light-mode .sinonimos span {
+      background-color: #bbb;
+      color: #000;
+    }
+    .pronunciacion {
+      color: #70d6ff;
+    }
+    body.light-mode .pronunciacion {
+      color: #003366;
     }
     .botones-busqueda {
       display: flex;
@@ -173,6 +183,22 @@
     }
     body.light-mode #ultima-actualizacion {
       color: #444;
+    }
+    .italic { font-style: italic; }
+    mark { background: #fffd38; color: black; padding: 0 4px; border-radius: 3px; }
+    .sugerencias button {
+      margin: 5px 5px 0 0;
+      padding: 5px 10px;
+      border-radius: 6px;
+      border: none;
+      background-color: #555;
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+    }
+    .sugerencias button:hover {
+      background-color: #3ae374;
+      color: black;
     }
     @media (max-width: 600px) {
       h1 {
