--- a/index.html
+++ b/index.html
@@ -74,6 +74,18 @@
     h1 .rojo {
       color: #ff5c39;
     }
+    input::-webkit-calendar-picker-indicator {
+      display: none !important;
+    }
+    input::-webkit-search-decoration,
+    input::-webkit-search-cancel-button,
+    input::-webkit-search-results-button,
+    input::-webkit-search-results-decoration {
+      display: none;
+    }
+    datalist {
+      display: none;
+    }
     input, button {
       width: 100%;
       padding: 12px;
