--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
   <div class="ventana">
     <h1><span class="azul">Diccionario</span><span class="rojo"> - AR</span></h1>
     <div class="busqueda">
-      <input type="text" id="termino" placeholder="Escribe una palabra o abreviatura...">
+      <input type="text" id="termino" placeholder="Escribe una palabra o abreviatura..." autocomplete="off">
     </div>
     <div class="botones-busqueda">
       <button onclick="buscar()">Buscar</button>
