--- a/agregar.html
+++ b/agregar.html
@@ -11,9 +11,7 @@
       font-family: 'MiddleOfApril';
       src: url('Middle-of-April.ttf') format('truetype');
     }
-    * {
-      box-sizing: border-box;
-    }
+    * { box-sizing: border-box; }
     body {
       font-family: 'Segoe UI', sans-serif;
       background-color: #111;
@@ -63,21 +61,30 @@
     }
     .azul { color: #1877f2; }
     .rojo { color: #ff5c39; }
+    #loader {
+      display: none;
+      text-align: center;
+      margin: 10px 0;
+    }
+    #loader span {
+      display: inline-block;
+      width: 10px;
+      height: 10px;
+      margin: 0 3px;
+      background-color: #3ae374;
+      border-radius: 50%;
+      animation: bounce 0.6s infinite alternate;
+    }
+    #loader span:nth-child(2) { animation-delay: 0.2s; }
+    #loader span:nth-child(3) { animation-delay: 0.4s; }
+    @keyframes bounce {
+      to { transform: translateY(-10px); }
+    }
     @media (max-width: 600px) {
-      body {
-        padding: 20px;
-      }
-      .formulario {
-        padding: 20px;
-        border-radius: 15px;
-      }
-      h2 {
-        font-size: 2rem;
-      }
-      select, input, textarea, button {
-        font-size: 14px;
-        padding: 8px;
-      }
+      body { padding: 20px; }
+      .formulario { padding: 20px; border-radius: 15px; }
+      h2 { font-size: 2rem; }
+      select, input, textarea, button { font-size: 14px; padding: 8px; }
     }
   </style>
 </head>
@@ -99,6 +106,8 @@
       <textarea id="definicion" placeholder="Definición"></textarea>
       <input type="text" id="sinonimos" placeholder="Sinónimos (separados por coma)">
 
+      <div id="loader"><span></span><span></span><span></span></div>
+
       <button type="submit">Guardar</button>
       <button type="button" onclick="window.location.href='index.html'">Cancelar</button>
     </form>
@@ -107,51 +116,54 @@
 
   <script>
     const URL_SCRIPT = 'https://script.google.com/macros/s/AKfycbzAzMs8JEWCQM0fzZobajM3iozSpTVnyS8mDtJuccWVmeu-rg4M3ed41fXWXEEBpz8/exec';
+    const GLOSARIO_URL = 'https://diccionario-ar-backend.onrender.com/terminos';
 
-    document.getElementById('formulario').addEventListener('submit', function(e) {
+    document.getElementById('formulario').addEventListener('submit', async function(e) {
       e.preventDefault();
+      document.getElementById('loader').style.display = 'block';
+      document.getElementById('mensaje').textContent = '';
 
       const tipo = document.getElementById('tipo').value;
       const termino = document.getElementById('termino').value.trim();
-      const traduccion = document.getElementById('traduccion').value.trim();
-      const pronunciacion = document.getElementById('pronunciacion').value.trim();
-      const categoria = document.getElementById('categoria').value.trim();
-      const definicion = document.getElementById('definicion').value.trim();
-      const sinonimos = document.getElementById('sinonimos').value.trim();
+      const mayuscula = termino.toUpperCase();
 
-      const datos = {
-        termino,
-        tipo,
-        traduccion: tipo === 'forma' ? traduccion : traduccion,
-        pronunciacion: tipo === 'termino' ? pronunciacion : '',
-        categoria: tipo === 'forma' ? categoria : categoria,
-        definicion,
-        sinonimos: tipo === 'termino' ? sinonimos : '',
-        formaFarmaceutica: tipo === 'forma' ? termino : ''
-      };
+      try {
+        const respuesta = await fetch(GLOSARIO_URL);
+        const data = await respuesta.json();
 
-      fetch(URL_SCRIPT, {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
-        body: new URLSearchParams(datos)
-      })
-      .then(res => res.text())
-      .then(msg => {
-        const popup = document.getElementById('popupMsg');
-        popup.textContent = msg;
-        popup.style.display = 'block';
-        setTimeout(() => popup.style.display = 'none', 2000);
+        if (data[mayuscula]) {
+          document.getElementById('mensaje').textContent = '⚠️ El término ya existe en el glosario';
+          document.getElementById('loader').style.display = 'none';
+          return;
+        }
+
+        const datos = {
+          termino,
+          tipo,
+          traduccion: tipo === 'forma' ? document.getElementById('traduccion').value.trim() : document.getElementById('traduccion').value.trim(),
+          pronunciacion: tipo === 'termino' ? document.getElementById('pronunciacion').value.trim() : '',
+          categoria: tipo === 'forma' ? document.getElementById('categoria').value.trim() : document.getElementById('categoria').value.trim(),
+          definicion: document.getElementById('definicion').value.trim(),
+          sinonimos: tipo === 'termino' ? document.getElementById('sinonimos').value.trim() : '',
+          formaFarmaceutica: tipo === 'forma' ? termino : ''
+        };
+
+        const envio = await fetch(URL_SCRIPT, {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
+          body: new URLSearchParams(datos)
+        });
+
+        const mensaje = await envio.text();
+        mostrarPopup(mensaje);
         document.getElementById('formulario').reset();
         mostrarCampos();
-        document.getElementById('pronunciacion').style.display = 'block';
-        document.getElementById('categoria').style.display = 'block';
-        document.getElementById('definicion').style.display = 'block';
-        document.getElementById('sinonimos').style.display = 'block';
-      })
-      .catch(err => {
+      } catch (error) {
+        console.error(error);
         document.getElementById('mensaje').textContent = '❌ Error al enviar';
-        console.error(err);
-      });
+      } finally {
+        document.getElementById('loader').style.display = 'none';
+      }
     });
 
     function mostrarCampos() {
@@ -175,7 +187,17 @@
         campos.categoria.style.display = 'block';
       }
     }
+
+    function mostrarPopup(msg) {
+      const popup = document.getElementById('popupMsg');
+      popup.textContent = msg;
+      popup.style.display = 'block';
+      setTimeout(() => popup.style.display = 'none', 2000);
+    }
   </script>
-  <div id="popupMsg" style="display:none; position: fixed; top: 20px; left: 50%; transform: translateX(-50%); background-color: #3ae374; color: black; padding: 12px 24px; border-radius: 10px; font-weight: bold; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,0.5);">✅ Término agregado correctamente</div>
+
+  <div id="popupMsg" style="display:none; position: fixed; top: 20px; left: 50%; transform: translateX(-50%); background-color: #3ae374; color: black; padding: 12px 24px; border-radius: 10px; font-weight: bold; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,0.5);">
+    ✅ Término agregado correctamente
+  </div>
 </body>
 </html>
