--- a/sugerencias.html
+++ b/sugerencias.html
@@ -173,7 +173,7 @@
         headers: {
           'Content-Type': 'application/x-www-form-urlencoded',
         },
-        body: `sugerencia=${encodeURIComponent(texto)`
+        body: `sugerencia=${encodeURIComponent(texto)}`
       })
       .then(res => res.ok ? res.text() : Promise.reject(res.statusText))
       .then(() => {
